finish the carousel

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,6 @@ body{
     font-family: 'Water Brush', cursive;
 }
 /* Spinner-margin */
-.spinner-margin{
+/* .spinner-margin{
     margin-top: 20%;
-}
+} */
